[로또 - 웹, DB] 김고래 미션 제출합니다. (#82)
* docs: Add readme.md

* feat: Add LottoNumber class

* feat: Add Lotto class and match method to match lotto numbers

* feat: Add LottoGenerator class

- Add LottoNumber comparable
- Add create method

* feat: Add LottoGeneratingStrategy interface

- Add RandomLottoGeneratingStrategy class
- Add MockLottoGeneratingStrategy class

* feat: Add LottoTickets class

- generate lotto tickets by the amount paid

* feat: Add Payment class

* feat: Add Rank enum

* feat: Add Result class

* feat: Add exception handling

* feat: Calculate earnings rate

- Calculate total winning money

* refactor: Replace for statements with stream

* feat: Add BonusNumber class

* feat: Add fifth rank and modify second rank

- modify valueOf method to check bonus number

* feat: Add WinningLotto class

- Add produceResult method to produce result

* feat: Add OutputView class

- Add Lotto tickets print method
- Add Lotto result print method
- Add Lotto earnings rate print method

* fix: Change primitive type of totalWinningMoney

- Fix produceResultForEachTicket method logic

* refactor: Add LottoRepository class to divide responsibility of generating lotto

- modify LottoTickets class

* refactor: modify ManualLottoGeneratingStrategy constructor to use polymorphism

* feat: Add console controller

* feat: Add CountOfLotto class

* feat: Add InputView class

* refactor: replace for statement with stream

* feat: Add custom exception class

* refactor: Modify Result class constructor

* refactor: constant

* refactor: Code convention & remove unnecessary import

* test: Add test of CountOfLotto class & apply specific exception

* refactor: extract method

* refactor: Modified method name

* refactor: Change access modifier & clean up

* refactor: Move sorting process to the other method

* refactor: Change access modifier

* refactor: Modify data type (Integer->Long)

* 

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+
+    <title>우아한 바다 이야기</title>
 </head>
+
 <body>
-Hello World!!
+<section class="container">
+    <h1>로또 구매</h1>
+    <form action="/payment" method="post">
+        <div class="form-group">
+            <label for="user">사용자 이름</label>
+            <input type="text" id="user" name="user_name" class="form-control"/>
+            <small class="form-text text-muted">원하시는 사용자 이름을 입력해주세요.</small>
+        </div>
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">시작하기</button>
+        </div>
+    </form>
+
+    <div class="row">
+        <div class="col-md-6">
+            <h3>Recent</h3>
+            <div class="table-responsive-lg text-center">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Round</th>
+                        <th scope="col">name</th>
+                        <th scope="col">Total Price</th>
+                        <th scope="col">Earning Rate</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#lottoGames}}
+                    <tr>
+                        <th scope="row"><a href="/result/{{round}}">{{round}}</a></th>
+                        <td>{{name}}</td>
+                        <td class="text-right">{{totalWinningMoney}} 원</td>
+                        <td>{{earningRate}}</td>
+                    </tr>
+                    {{/lottoGames}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <h3>Ranking</h3>
+            <div class="table-responsive-lg text-center">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">name</th>
+                        <th scope="col">Total Price</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {{#ranking}}
+                    <tr>
+                        <td>{{name}}</td>
+                        <td class="text-right">{{totalWinningMoney}} 원</td>
+                    </tr>
+                    {{/ranking}}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
+
 </html>
