[로또 웹, DB] 안돌 미션 제출합니다. (#102)
* merge: www 브랜치 병합

미리 만들어둔 템플릿.

* feat: DBManager 생성

커넥션, 공통 쿼리 실행

* feat: UserLottoDao 생성

* feat: WinningLottoDao 생성

* feat: LottoResultDao 생성

* feat: Presentation 패키지 생성

1. Presentaion은 인풋 데이터를 처리하고 서비스 계층에 전달해줌.
2. 도메인의 UserLottoCreator의 일부 역할을 Presentation에 넣음
3. Service 계층에서 Domain에 접근. 인자를 presentation으로부터 받음.

* refactor: domain 변경

바꾼 계층구조에 맞게 조정.

* feat: dto 패키지 생성

* feat: service 패키지 생성

1. 도메인과 관계하는 패키지
2. 필요 정보는 Dto 또는 View로부터 전달받음.
3. 무상태.

* feat: WebView 생성

콘솔에서 문자 메시지를 구성하듯이
WebView에서 Json Key Value를 구성한다.

* refactor: template 수정

lotto.js 수정.

* refactor: 피드백 반영

1. domain.LottoCreator에 create() 메서드 추가.
2. dao 패키지 수정.

* feat: QueryManager 생성

JDBC template

* refactor: dao 패키지 수정

QueryManager 사용하도록 변경.

* refactor: dto 수정

* refactor: Presentation -> Translator로 변경

service 패키지로 이동.

* refactor: service 패키지 수정

gameId 활용.

* style: import 변경

패키지 이동.

* feat: controller 패키지 생성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
-    <title>로또</title>
+    <title>Lotto Generator</title>
+    <link rel="stylesheet" href="./statics/css/lotto.css">
 </head>
+
 <body>
-Hello World!!
+    <div id="headline">
+        <h1>답은 "로또"다.</h1>
+    </div>
+    <div id="controls">
+        <div id="user-input">
+            <input type="number" name="money" id="money" placeholder="구입금액">
+            <input type="number" name="manual" id="manual" placeholder="수동구매">
+        </div>
+        <button id="generate" type="button">가즈아</button>
+        <button id="winning" type="button" style="visibility: hidden;">주작기</button>
+    </div>
+    <div id="container">
+    </div>
+    <script src="./statics/js/lotto.js"></script>
 </body>
+
 </html>
