[로또 - 웹, DB] 코니 미션 제출합니다. (#88)
* refactor: Money, InputView Class

numberOfManualLotto를 Money와 비교하여 검증하는 로직을 Money 객체 안으로 이동

* refactor: LottoMachine, ConsoleUIApplication Class

View 관련 로직을 도메인에서 컨트롤러로 이동

* feat: DBConnector Class

DB 연결을 위한 기능 구현

* feat: LottoDAO, LottoDTO Class

Lotto 객체를 위한 DAO, DTO 구현

* feat: WinningLottoDAO, WinningLottoDTO Class

WinningLotto 객체를 위한 DAO, DTO 구현

* feat: LottoResultDAO, LottoResultDTO Class

LottoResult 객체를 위한 DAO, DTO 구현

* feat: LottoDAOTest, WinningLottoDAOTest, LottoResultDAOTest Class

DAO 테스트 추가

* refactor: LottoMachine Class

중복 제거

* feat: WebUILottoApplication, WebInputParser Class

금액 입력 기능 구현, style.css 생성 및 필요한 파일 로드

* feat: WebUILottoApplication, WebInputParser, WebOutputView Class

수동 로또의 수 입력 기능, LottoTickets 출력 기능 구현

* feat: WebUILottoApplication Class

수동 로또 입력 기능 구현

* feat: WebUILottoApplication, WebInputParser, WebOutputView Class

우승 로또 입력 및 출력 기능 구현

* feat: WebUILottoApplication, WebOutputView Class

결과 출력 기능 구현

* feat: gameDTO Class

로또 한 회차에 필요한 객체들을 저장하는 gameDTO 클래스를 만들고 리팩토링

* feat: WebUILottoApplicationWithDB Class

데이터베이스 저장 기능 구현

* feat: WebUILottoApplicationWithDB Class

회차별 조회 기능 구현

* fix: LottoResult, OutputView Class

수익률 출력 오류 수정

* fix: LottoResult Class

web의 우승 상금 출력 오류 수정

* refactor: all

사용하지 않는 메소드 제거, LottoDTO setter 제거 등 전체적인 리팩토링

* fix: DAOs

DAO에 try-with-resources 구문 반영

* refactor: WebUILottoApplicationWithDB

사용하지 않는 import 제거

* refactor: delete GameDTO, use session

GameDTO를 지우고 세션을 사용하도록 변경

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,16 +11,13 @@
 </head>
 <body>
 <div id="container">
-    <h1>로또</h1>
+    <h1>error! 😅</h1>
 
     <p>
-        로또를 구입할 금액을 입력해 주세요.
+        {{error}}
     </p>
 
-    <form action="/number" method="POST">
-        <input name="money" type="text"><br>
-        <input type="submit" value="다음">
-    </form>
+    <input type="submit" value=" 뒤로가기 " onclick="history.back(-1);">
 </div>
 </body>
 </html>
