--- a/src/main/resources/templates/check.html
+++ b/src/main/resources/templates/check.html
@@ -14,12 +14,12 @@
     <h1>로또</h1>
 
     <p>
-        로또를 구입할 금액을 입력해 주세요.
+        입력하신 우승 로또는 다음과 같습니다.<br><br>
+        {{{winningLotto}}}
     </p>
 
-    <form action="/number" method="POST">
-        <input name="money" type="text"><br>
-        <input type="submit" value="다음">
+    <form action="/result" method="POST">
+        <input type="submit" value="결과 확인">
     </form>
 </div>
 </body>
