[ADD] Lotto 게임 컨트롤러들과 서비스 로직들을 추가합니다

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,14 @@
     <title>로또</title>
 </head>
 <body>
-Hello World!!
+<form action="/purchase-page" method="get">
+    <input type="submit" value="로또 구매">
+</form>
+<form action="/history" method="get">
+    <input type="submit" value="당첨 결과 조회">
+</form>
+<form action="/lottery-page" method="get">
+    <input type="submit" value="로또 추첨">
+</form>
 </body>
 </html>
