--- a/src/main/resources/templates/lottery-statistics-page.html
+++ b/src/main/resources/templates/lottery-statistics-page.html
@@ -13,7 +13,7 @@
 {{/statistics}}
 총 수익률은 {{earningRatesAsPercent}}% 입니다.
 
-<form action="/" method="post">
+<form action="/" method="get">
     <br>
     <input type="submit" value="홈으로">
 </form>
